hard-gists/c28329f12711a914c7a8cbe6eeb947c0/run.log
=== Docker Run Log for c28329f12711a914c7a8cbe6eeb947c0 ===
Started at: Mi 29. Okt 19:49:45 CET 2025

[2025-10-29 19:49:45] START: Running container for c28329f12711a914c7a8cbe6eeb947c0
[2025-10-29 19:49:46] SUCCESS: Container e5e9d671f1e29c08fdfbf66b768838f53abc28cf829eef0ab1466bafd6968491 started for c28329f12711a914c7a8cbe6eeb947c0
=== Container logs for c28329f12711a914c7a8cbe6eeb947c0 ===
  File "/snippet.py", line 63
    print '\n\tMaking Directory:',path
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for c28329f12711a914c7a8cbe6eeb947c0 ===
[2025-10-29 19:49:48] INFO: Container e5e9d671f1e29c08fdfbf66b768838f53abc28cf829eef0ab1466bafd6968491 has stopped
